[package]
name = "seclab"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bincode = "1.3.3"
env_logger = "0.9.0"
fuser = "0.9.1"
libc = "0.2.103"
log = "0.4.14"
rpassword = "5.0.1"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.23"
