[package]
name = "seclab"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
argon2 = "0.3.1"
bincode = "1.3.3"
blake3 = "1.1.0"
env_logger = "0.9.0"
fuser = "0.9.1"
hex = "0.4.3"
libc = "0.2.103"
log = "0.4.14"
rand = "0.8.4"
rpassword = "5.0.1"
serde = { version = "1.0.130", features = ["derive"] }
shrust = "0.0.7"
structopt = "0.3.23"
themis = { git = "https://github.com/cossacklabs/themis/" }
time = { version = "0.3.4", features = ["formatting", "std", "serde"] }
